--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate for Humanity</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="top-banner">
+        <div>
+            <h1>Let's Help Those Who Are In More Need</h1>
+            <p> Thousands of people are badly affected by flood in Sylhet area due to heavy rainfall in Himalayas</p>
+            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"> HELP NOW </a>
+        </div>
+    </section>
     
 </body>
 </html>
