--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
     <title>Donate for Humanity</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Poppins&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="top-banner">
         <div>
             <h1>Let's Help Those Who Are In More Need</h1>
-            <p> Thousands of people are badly affected by flood in Sylhet area due to heavy rainfall in Himalayas</p>
-            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"> HELP NOW </a>
+        </div>
+        <div>
+            <p id="top-2"> Thousands of people are badly affected by flood in Sylhet area due to heavy rainfall in Himalayas</p>
+        </div>
+        <div>    
+            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"> Donate Now </a>
         </div>
     </section>
+
     
 </body>
 </html>
