--- a/index.html
+++ b/index.html
@@ -22,6 +22,32 @@
             <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"> Donate Now </a>
         </div>
     </section>
+    <section class="donate-now">
+        <div>
+            <h2>Donate Today</h2>
+            <p>Learning to program is hard. It's difficult to know where to start, but it's even more challenging to know what to do after you've learned the basics. what it takes to join their ranks, highlighting how the authors learned programming and landed their first job, as well as chronicling people's moves from novice professional developer to exceptional software engineer.</p>
+        </div>
+        <div class="container">
+            <div class="width">
+                <h2>100tk</h2>
+            </div>
+            <div id="color" class="width">
+                <h2>200tk</h2>
+            </div>
+            <div class="width">
+                <h2>500tk</h2>
+            </div>
+            <div class="width">
+                <h2>1000tk</h2>
+            </div>
+            <div class="width">
+                <h2>5000tk</h2>
+            </div>
+        </div>
+        <div>
+            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"><b>  LEARN MORE  </b></a>
+        </div>
+    </section>
 
     
 </body>
