--- a/index.html
+++ b/index.html
@@ -45,10 +45,31 @@
             </div>
         </div>
         <div>
-            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"><b>  LEARN MORE  </b></a>
+            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"><b> Donate Now </b></a>
         </div>
     </section>
+    <section class="donate-plan">
+        <h2>Our Donate Plan</h2>
+        <p style="text-align:center"> You may participate in the following donate plans according to the needs of the affected people at the area of flood.</p>
+        <div class="flexible-container">
+            <div id="donate-item1">
+                <img src="icons/food.png" width="50px" height="50px" alt="food">
+                <h3>Food for a Family</h3>
+                <p>Learning to program is hard. It's difficult to know where to start, but it's even more challenging to know what to do after you've learned the basics. what it takes to join their ranks, highlighting how the authors learned programming and landed their first job, as well as chronicling people's moves from novice professional developer to exceptional software engineer.</p>
+            </div>
+            <div id="donate-item2">
+                <img src="icons/shelter.png" width="50px" height="50px" alt="shelter">
+                <h3>Shelter for a Family</h3>
+                <p>Learning to program is hard. It's difficult to know where to start, but it's even more challenging to know what to do after you've learned the basics. what it takes to join their ranks, highlighting how the authors learned programming and landed their first job, as well as chronicling people's moves from novice professional developer to exceptional software engineer.</p>
+            </div>
+            <div id="donate-item3">
+                 <img src="icons/edu2.png" width="50px" height="50px" alt="education">
+                 <h3>Education for Children</h3>
+                 <p>During the crisis of this humanitarian moment, lots of education centers are closed</p>
+            </div>
+        </div>
 
+    </section>
     
 </body>
 </html>
