--- a/index.html
+++ b/index.html
@@ -68,6 +68,27 @@
                  <p>During the crisis of this humanitarian moment, lots of education centers are closed</p>
             </div>
         </div>
+    </section>
+    <section class="flexible-container">
+        <div class="half-width">
+            <h2>Their Lives Depend on Your Donation</h2>
+            <p>Many roads, houses and croplands have gone under water as major rivers in this region keeps swelling. Around 20 lakh flood-hit people of Sylhet and Sunamganj are going through shortages of drinking water and food. Sylhet City Corporation and the district administration has opened 215 flood centres in the affected areas. They have distributed 129 tonnes of rice and 1,000 sacks of dry food among the victims, while 100 more tonnes of rice and 3,000 sacks of dry food have been allocated for distribution.</p>
+            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"><b> How to Contribute? </b></a>
+        </div>
+        <div class="half-width">
+            <img src="images/donation6.jpg" alt="Their lives depend on your donation">
+        </div>
+    </section>
+    <section class="flexible-container">
+        <div class="half-width">
+            <img src="images/donation11.jpg" alt="Their lives depend on your donation">
+        </div>
+        <div class="half-width">
+            <h2>They Need Us to Survie</h2>
+            <p>Around 20 lakh flood-hit people of Sylhet and Sunamganj are going through shortages of drinking water and food. Sylhet City Corporation and the district administration has opened 215 flood centres in the affected areas. </p>
+            <p>Many roads, houses and croplands have gone under water as major rivers in this region keeps swelling. So their lives depend on your donation which will help them to come back to normal life. </p>
+            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"><b> How to Contribute? </b></a>
+        </div>
 
     </section>
     
