--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Poppins&display=swap" rel="stylesheet"> 
+    link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Lobster&family=Poppins&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -91,6 +94,20 @@
         </div>
 
     </section>
-    
+    <section>
+        <div class="email-option">
+            <h2>Get My Updates</h2>
+            <p>To get the update news, and know about recent events please subscribe with our newsletter with your email.</p>
+        </div>
+        </div class="email-form">
+            <form action="">
+            <input type="text" alt="Email">
+            <button>Subscribe</button>
+        </form>
+    </section>
 </body>
+<footer>
+    <h4 id="be-humble">Be Humble</h4>
+    <h6>I'm gonna do it</h6>
+    </footer>
 </html>
