--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p id="top-2"> Thousands of people are badly affected by flood in Sylhet area due to heavy rainfall in Himalayas</p>
         </div>
         <div>    
-            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"> Donate Now </a>
+            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://github.com/RupnaPro/Donate-for-Humanity"> Donate Now </a>
         </div>
     </section>
     <section class="donate-now">
@@ -47,8 +47,13 @@
                 <h2>5000tk</h2>
             </div>
         </div>
+        <div class="container">
+            <div class="width">
+                <p>Other Amount (Taka)</p>
+            </div>
+        </div>
         <div>
-            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"><b> Donate Now </b></a>
+            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://github.com/RupnaPro/Donate-for-Humanity"><b> Donate Now </b></a>
         </div>
     </section>
     <section class="donate-plan">
@@ -76,7 +81,7 @@
         <div class="half-width">
             <h2>Their Lives Depend on Your Donation</h2>
             <p>Many roads, houses and croplands have gone under water as major rivers in this region keeps swelling. Around 20 lakh flood-hit people of Sylhet and Sunamganj are going through shortages of drinking water and food. Sylhet City Corporation and the district administration has opened 215 flood centres in the affected areas. They have distributed 129 tonnes of rice and 1,000 sacks of dry food among the victims, while 100 more tonnes of rice and 3,000 sacks of dry food have been allocated for distribution.</p>
-            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"><b> How to Contribute? </b></a>
+            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://github.com/RupnaPro/Donate-for-Humanity"><b> How to Contribute? </b></a>
         </div>
         <div class="half-width">
             <img src="images/donation6.jpg" alt="Their lives depend on your donation">
@@ -90,7 +95,7 @@
             <h2>They Need Us to Survie</h2>
             <p>Around 20 lakh flood-hit people of Sylhet and Sunamganj are going through shortages of drinking water and food. Sylhet City Corporation and the district administration has opened 215 flood centres in the affected areas. </p>
             <p>Many roads, houses and croplands have gone under water as major rivers in this region keeps swelling. So their lives depend on your donation which will help them to come back to normal life. </p>
-            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/anup-nokrek/"><b> How to Contribute? </b></a>
+            <a class="link-button" target="_blank" rel="noopener noreferrer" href="https://github.com/RupnaPro/Donate-for-Humanity"><b> How to Contribute? </b></a>
         </div>
 
     </section>
@@ -99,11 +104,12 @@
             <h2>Get My Updates</h2>
             <p>To get the update news, and know about recent events please subscribe with our newsletter with your email.</p>
         </div>
-        </div class="email-form">
+        <div class="email-form">
             <form action="">
-            <input type="text" alt="Email">
-            <button>Subscribe</button>
-        </form>
+                <input type="text" name="Email">
+                <button>Subscribe</button>
+            </form>
+        </div>
     </section>
 </body>
 <footer>
